<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a Item</string>
    <string name="editor_activity_title_new_item">Add a Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_item_successful">item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_label">Change Quantity</string>
    <string name="hint_name">Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_price">Price</string>
    <string name="hint_sup_name">Supplier Name</string>
    <string name="hint_sup_email">Supplier E-Mail</string>
    <string name="hint_phone">Supplier phone number</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sup_name">Supplier Name</string>
    <string name="sup_email">Supplier E-Mail</string>
    <string name="phone">Supplier phone number</string>
    <string name="call_sup">Call!</string>
    <string name="editor_error">Please add all values and save then</string>
    <string name="plus">+</string>
    <string name="minus">-</string>


</resources>
